    well as default getter functions and modifiers to separate files, so
    they're more obvious to find and check
  - rk.XML.input() now checks wheter "size" is exactly one of "small",
    "medium" or "large"
  - rk.JS.doc() now uses a more robust method to set global variables, namely
    by defining an additional function setGlobalVars() and calling that
    inside preprocess()
removed:
  - the functions rk.set.language() rk.get.language() were no longer useful
    and therefore removed
  - also removed the option "lang" from rk.rkh.doc(), rk.XML.plugin(),
    rk.XML.pluginmap() and rk.plugin.skeleton()

changes in version 0.06-5 (2014-10-19)
fixed:
  - the "show" feature in rk.plugin.skeleton() was broken due to changes in
    the namespace defaults
  - scanning plugin XML code for JS and help related content didn't work as
    expected in rk.plugin.component()
  - rk.rkh.scan() now also recognises <optioncolumn> and <matrix> nodes
  - a logical bug prevented rk.plugin.component() to run with default values
    for XML
  - internal function paste.JS.options(), used by rk.JS.options(), was only
    working correctly for the "then" part if ite() statements in arrays; now
    also produces usable code for an "else" part, if available
added:
  - new functions rk.XML.valueselector(),  rk.XML.valueslot() and the
    combining rk.XML.values() to define <valueselector> and <valueslot> nodes,
    similar to rk.XML.varselector(),  rk.XML.varslot() and rk.XML.vars()
  - new function rk.XML.select() to define <select> nodes
  - new functions rk.set.rkh.prompter() and rk.get.rkh.prompter() to make it
    easier to generate help files (later...)
  - rk.rkh.scan() (and automatically rk.plugin.skeleton() and
    rk.plugin.component()) are now capable of fetching text set with rk.set.rkh.prompter()
    and use it to generate help files
  - all functions scanned by rk.rkh.scan() for setting nodes in .rkh files