@@ -62,6 +62,9 @@ changed:
   - rk.JS.doc() now uses a more robust method to set global variables, namely
     by defining an additional function setGlobalVars() and calling that
     inside preprocess()
+  - due to changes needed for i18n and rk.JS.header() to work, check your
+    "result.header" values, there might be quote issues. for the most part,
+    remove quotes you added for rkwarddev >= 0.05-0
 removed:
   - the functions rk.set.language() rk.get.language() were no longer useful
     and therefore removed
